@@ -2692,7 +2692,7 @@ ns_maybe_dumpglyphs_background (struct glyph_string *s, char force_p)
           else
             face = FACE_FROM_ID (s->f, s->first_glyph->face_id);
           if (!face->stipple)
-            [(NS_FACE_BACKGROUND (face) != nil
+            [(NS_FACE_BACKGROUND (face) != 0
               ? ns_lookup_indexed_color (NS_FACE_BACKGROUND (face), s->f)
               : FRAME_BACKGROUND_COLOR (s->f)) set];
           else
